# docs/swagger.json
@@ -17,6 +17,49 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Login user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Login user",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user_request.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Invalid login credentials",
+                        "schema": {
+                            "$ref": "#/definitions/login_handler.message"
+                        }
+                    },
+                    "422": {
+                        "description": "Validation failed",
+                        "schema": {
+                            "$ref": "#/definitions/login_handler.message"
+                        }
+                    }
+                }
+            }
+        },
         "/movie": {
             "post": {
                 "description": "Create movie",
@@ -188,6 +231,43 @@
                     }
                 }
             }
+        },
+        "/register": {
+            "post": {
+                "description": "Register user in database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Register user",
+                "parameters": [
+                    {
+                        "description": "User",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user_request.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "422": {
+                        "description": "Validation failed",
+                        "schema": {
+                            "$ref": "#/definitions/register_handler.message"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -208,6 +288,14 @@
             }
         },
         "get_movie_handler.message": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "login_handler.message": {
             "type": "object",
             "properties": {
                 "message": {
@@ -243,6 +331,14 @@
                 }
             }
         },
+        "register_handler.message": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "requests.CreateMovieRequest": {
             "type": "object",
             "required": [
@@ -263,6 +359,29 @@
                 },
                 "year": {
                     "type": "integer"
+                }
+            }
+        },
+        "user_request.UserRequest": {
+            "type": "object",
+            "required": [
+                "firstname",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "firstname": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
